@@ -4523,7 +4523,7 @@
     },
     {
       "name": "LoadDirectoryFilesEx",
-      "description": "Load directory filepaths with extension filtering and recursive directory scan",
+      "description": "Load directory filepaths with extension filtering and recursive directory scan. Use \"/DIR\" in the filter string to include directories in the result",
       "returnType": "FilePathList",
       "params": [
         {
@@ -8777,6 +8777,25 @@
         {
           "type": "Color",
           "name": "tint"
+        }
+      ]
+    },
+    {
+      "name": "ColorLerp",
+      "description": "Get color lerp interpolation between two colors, factor [0.0f..1.0f]",
+      "returnType": "Color",
+      "params": [
+        {
+          "type": "Color",
+          "name": "color1"
+        },
+        {
+          "type": "Color",
+          "name": "color2"
+        },
+        {
+          "type": "float",
+          "name": "factor"
         }
       ]
     },
