@@ -53,6 +53,7 @@ module Raylib
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR = 3
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT = 4
   RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2 = 5
+  RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES = 6
   RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION = "vertexPosition"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_POSITION
   RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD = "vertexTexCoord"   # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD
   RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL = "vertexNormal"       # Bound by default to shader location: RL_DEFAULT_SHADER_ATTRIB_LOCATION_NORMAL
